2016-03-27 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/inline.c:
	  Disable failing test for OpenBSD host.
	* src/SDCCglue.c:
	  Add assertions to help track down pointer size bugs.

2016-03-27 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/asstm8/stm8pst.c
	  Apply part of patch #255 by Peter Dons Tychsen.

2016-03-24 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/z80/gen.c
	  Improve long long compatibility among different host machines.

2016-03-22 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCast.c
	* src/SDCCglue.c
	* src/SDCCval.c
	* src/SDCCval.h
	* src/pic16/glue.c
	* src/z80/gen.c
	  Improve long long compatibility among different host machines.

2016-03-19 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/z80/gen.c
	  Improve compatability of SDCC between 32-bit and 64-bit machines.

2016-03-15 Molnar Karoly <molnarkaroly AT users.sf.net>

	* src/pic14/pcode.c:
	Fixed bug: "#2481 wrong asm code for pic16f1827 (or even others?)"

2016-03-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCpeeph.c (labelIsUncondJump): also search backwards
	* src/mcs51/peeph.def: added rules 257.a-i for jump-to-jump optimization,
	  added	rules 259.c-f to remove dead jumps, implements RFE 491
	* src/SDCCerr.c,
	* src/SDCCerr.h: changed W_UNKNOWN_FEXT to E_UNKNOWN_FEXT
	* src/SDCCmain.c (processFile): also accept .h sources, implement RFE 460

2016-03-12 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/z80/gen.c
	  Rollback to previous version.
	* support/regression/tests/bug-2477.c
	  Disable this test case.

2016-03-11 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/z80/gen.c
	  Fix a bug in genRet(): long long return value is cut to long.
	* support/regression/tests/bug-2477.c
	  Add a new test case.

2016-03-10 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/stm8/gen.c
	  Fix a bug in genAnd(): conflict register assignment.
	* support/regression/tests/bug-2480.c
	  Add a new test case.
