@@ -20,8 +20,6 @@ void
 testLongLong (void)
 {
 #if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_ds400) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_hc08) && !defined(__SDCC_s08)
-#if 0
   ASSERT (ss () == -1);
-#endif
 #endif
 }
