@@ -12,7 +12,7 @@ void
 testTortureExecute (void)
 {
 #if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_ds400) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_hc08) && !defined(__SDCC_s08)
-#if 0 // failed on 32-bit machine
+#if !defined(__SDCC_gbz80) // bug #2329
 
   unsigned long long xx;
   unsigned long long *x = (unsigned long long *) &xx;
